<resources>
    <string name="app_name">Accident Report</string>
    <string name="page_heading">Accident Report</string>
    <string name="description_info">Info</string>
    <string name="action_settings">Settings</string>
    <string name="select_party_type">Involvement</string>
    <string name="accident_number">Accident #</string>
    <string name="acc_num">0000000</string>
    <string name="aip">Add Involved Person</string>
    <string name="uip">Update Involved Person</string>
    <string name="sip">Select Involved Person</string>
    <string name="aaid">Add Accident</string>
    <string name="uaid">Update Accident</string>
    <string name="said">Please Select Accident</string>
    <string name="apt">Add Role</string>
    <string name="upt">Update Role</string>
    <string name="spt">Select Role</string>
    <string name="aiv">Add Involved Vehicle</string>
    <string name="uiv">Update Involved Vehicle</string>
    <string name="siv">Select Involved Vehicle</string>
    <string name="adu">Add Profile</string>
    <string name="udu">Update Profile</string>
    <string name="sdu">Please Select Device User</string>
    <string name="adv">Add Vehicle Profile</string>
    <string name="udv">Update Vehicle Profile</string>
    <string name="sdv">Select Vehicle Profile</string>
    <string name="mm">Menu</string>
    <string name="ig">Accident Media Gallery</string>
    <string name="tocopy">To Copy</string>
    <string name="svo">Select Vehicle Associate</string>
    <string name="aan">Add Accident Notes</string>
    <string name="uan">Update Accident Notes</string>
    <string name="avn">Add Vehicle Notes</string>
    <string name="ain">Add Person\'s Notes</string>
    <string name="sna">Select for Notes Attachment</string>
    <string name="can">Touch Image to Confirm Selection and Continue</string>
    <string name="san">Select Notes</string>
    <string name="wipn">Work With This Person\'s Notes</string>
    <string name="wivn">Work With This Vehicle\'s Notes</string>
    <string name="docv">Document Viewer</string>
    <string name="wipp">View Photos, Videos, and Listen to Recordings of this subject.</string>
    <string name="tap">Take a Photo of this subject</string>
    <string name="default_message">Message here</string>
    <string name="tv0001">Name</string>
    <string name="tv0002">MI</string>
    <string name="tv0003">Last Name</string>
    <string name="tv0004">Address</string>
    <string name="tv0005">Address 2</string>
    <string name="tv0006">City</string>
    <string name="tv0007">State</string>
    <string name="tv0009">Email</string>
    <string name="tv0010">Home Phone</string>
    <string name="tv0011">Cell Phone</string>
    <string name="tv0012">Work Phone</string>
    <string name="tv0013">Involvement</string>
    <string name="tv0014">Insurance Company</string>
    <string name="tv0015">Policy Number</string>
    <string name="tv0016">Unique ID</string>
    <string name="tv0017">Insurance Company</string>
    <string name="tv0018">Company</string>
    <string name="tv0019">License or Badge Number</string>
    <string name="tv0020">License State</string>
    <string name="tv0030">License Plate</string>
    <string name="tv0031">State</string>
    <string name="tv0032">Expiration</string>
    <string name="tv0033">Vehicle ID</string>
    <string name="tv0034">Year</string>
    <string name="tv0035">Make</string>
    <string name="tv0036">Model</string>
    <string name="tv0050">Party Type</string>
    <string name="tv0051">Description</string>
    <string name="tv0101">Ambulance</string>
    <string name="tv0102">Police</string>
    <string name="tv0103">Fire Department</string>
    <string name="tv0106">Accident Info</string>
    <string name="tv01110">Accident</string>
    <string name="tv01111">Paint and Body</string>
    <string name="tv0113">Auto Repair</string>
    <string name="tv0114">Accident Attorneys Nearby</string>
    <string name="tv0115">Attorneys</string>
    <string name="tv0125">Involved People</string>
    <string name="tv0126">Involved Vehicles</string>
    <string name="tv0127">Accident Notes</string>
    <string name="tv0128">Accident Photos</string>
    <string name="tv0131">Update/Add Involved People - Drivers, Passengers Witnesses,  Officers,  Involved People   etc.</string>
    <string name="tv0132">Update/Add Involved Vehicles.</string>
    <string name="tv0133">Create Accident Notes.</string>
    <string name="tv0137">View Accident Photos</string>
    <string name="tv0138">Profile</string>
    <string name="tv0139">Update/Add Roles</string>
    <string name="tv0140">Role</string>
    <string name="tv0141">Update/Add Profile.</string>
    <string name="tv0142">Vehicle Profile</string>
    <string name="tv0143">Update/Add Vehicle Profile.</string>
    <string name="tv0144">Copy a Persons Profile into the current accident.</string>
    <string name="tv0145">Save the current information and exit.</string>
    <string name="mic_and_meg">Touch to turn on the microphone for continuous speech to text recognition. For Individual fields use the megaphone located above the field.</string>
    <string name="tv0148">Add a new Person to the current accident.</string>
    <string name="tv0149">Add a new Profile.</string>
    <string name="tv0150">Add a new Vehicle Profile.</string>
    <string name="tv0151">Add a new Vehicle to the current accident.</string>
    <string name="tv0152">Add a new Role.</string>
    <string name="tv0153">Add a new Accident.</string>
    <string name="tv0154">Delete this record.</string>
    <string name="tv0155">Copy a Vehicle Profile into the current accident.</string>
    <string name="tv0156">Assign Associates.</string>
    <string name="remove_from_vehicle">Remove from Vehicle.</string>
    <string name="tv0158">Attach Note to Person</string>
    <string name="tv0159">Attach Note to Vehicle</string>
    <string name="tv0160">Attach Note to Photo</string>
    <string name="tv0161">Attach Note to this Accident</string>
    <string name="tv0162">View Notes</string>
    <string name="tv0163">Pdf Menu</string>
    <string name="tv0166">View an exsisting Pdf Report.</string>
    <string name="tv0167">Create and View a new Pdf Report.</string>
    <string name="tv0180">Entry Date/Time</string>
    <string name="tv0181">Profile</string>
    <string name="tv0182">Accident Date</string>
    <string name="tv0183">Accident Time</string>
    <string name="tv0200">OK Say the Field Name to Begin</string>
    <string name="tv0201">OK Say Name</string>
    <string name="tv0202">OK Say Middle Initial</string>
    <string name="tv0203">OK Say Last Name</string>
    <string name="tv0204">OK Speak Drivers License Number.</string>
    <string name="tv0205">OK Say Address</string>
    <string name="tv0206">OK I\'m ready for address line 2</string>
    <string name="tv0207">OK I\'m Ready for City Name</string>
    <string name="tv0208">OK I\'m Ready for a State Name</string>
    <string name="tv0209">OK I\'m Ready for a Zip Code</string>
    <string name="tv0210">OK I\'m Ready for an Email Address</string>
    <string name="tv0211">OK I\'m Ready for a Home Phone Number</string>
    <string name="tv0212">OK I\'m Ready for a Cell Phone Number</string>
    <string name="tv0213">OK I\'m Ready for a Work Phone Number</string>
    <string name="tv0214">OK what is your role  Owner, Driver, Passenger, Investigator etc</string>
    <string name="insurance_company_name">OK I\'m Ready for your insurance company name</string>
    <string name="insurance_policy_number">OK I\'m Ready for your policy number</string>
    <string name="tv0217">OK I\'m Ready for your company name if applicable</string>
    <string name="tv0218">, or Say QUIT, NEXT, BACK, CLEAR to continue</string>
    <string name="tv0220">QUIT</string>
    <string name="tv0222">NEXT</string>
    <string name="tv0224">CLEAR</string>
    <string name="tv0226">BACK</string>
    <string name="tv0227">, or QUIT to Exit.</string>
    <string name="tv0228">, or Say QUIT, NEXT, BACK, or CLEAR.</string>
    <string name="tv0230">NAME</string>
    <string name="tv0231">MIDDLE INITIAL</string>
    <string name="tv0232">LAST NAME</string>
    <string name="tv0233">LICENSE</string>
    <string name="tv0234">LICENSE STATE</string>
    <string name="tv0235">ADDRESS</string>
    <string name="tv0236">ADDRESS TO</string>
    <string name="tv0237">CITY</string>
    <string name="tv0238">STATE</string>
    <string name="tv0240">EMAIL</string>
    <string name="tv0241">HOME PHONE</string>
    <string name="tv0242">CELL PHONE</string>
    <string name="tv0243">WORK PHONE</string>
    <string name="tv0246">COMPANY</string>
    <string name="tv0247">LICENSED 8</string>
    <string name="tv0248">LICENSE PLATE</string>
    <string name="tv0249">STATE</string>
    <string name="tv0250">EXPIRATION</string>
    <string name="tv0251">VEHICLE ID</string>
    <string name="tv0252">YEAR</string>
    <string name="tv0253">MAKE</string>
    <string name="tv0254">MODEL</string>
    <string name="tv0255">OK I\'m Ready for a Licence Plate Number.</string>
    <string name="tv0256">OK I\'m Ready for a State Name</string>
    <string name="tv0257">OK I\'m Ready for the Expiration Year.</string>
    <string name="tv0258">OK I\'m Ready for the Vehicle ID</string>
    <string name="tv0259">OK I\'m Ready for the year the vehicle was manufactured.</string>
    <string name="tv0260">OK I\'m Ready for the vehicle manufacturer name.</string>
    <string name="tv0261">OK I\'m Ready for the vehicle model name.</string>
    <string name="tv0262">OK I\'m Ready for the subject.</string>
    <string name="tv0263">OK I\'m Ready for the note.</string>
    <string name="tv0266">OK I\'m Ready for a party type.</string>
    <string name="tv0267">OK I\'m Ready for a description.</string>
    <string name="tv0300">Subject. :</string>
    <string name="tv0301">Note . . :</string>
    <string name="tv0302">Subject</string>
    <string name="tv0303">NoteID</string>
    <string name="tv0304">ImagePath</string>
    <string name="tv0305">Note</string>
    <string name="tv0500">No accident photos available!</string>
    <string name="image_share">Share Image</string>
    <string name="unique_id">Unique ID</string>
    <string name="tv1000">Audio recording error</string>
    <string name="tv1001">Client side error</string>
    <string name="tv1002">Insufficient permissions</string>
    <string name="tv1003">Network error</string>
    <string name="tv1004">Network timeout</string>
    <string name="tv1005">No match</string>
    <string name="tv1006">RecognitionService busy</string>
    <string name="tv1007">error from server</string>
    <string name="tv1008">No speech input</string>
    <string name="tv1009">Didn\'t understand, please try again.</string>
    <string name="party_type">Role</string>
    <string name="involved_party">Involved Person</string>
    <string name="accident_id">Accident ID</string>
    <string name="firstname">Name</string>
    <string name="mi">MI</string>
    <string name="lastname">Lastname</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome:</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="custom1">Icon Name</string>
    <string name="custom2">Contact Number</string>
    <string name="custom5">Server URL</string>
    <string name="icon_server_url">Icon Server URL</string>
    <string name="type_url">This is a Website URL</string>
    <string name="type_contact">This is a phone number</string>
    <string name="action_download_offline_language_libraries">Offline Languages</string>
    <string name="preference_offline_language_off">Prefer Offline Language Libraries - Off</string>
    <string name="include_vehicle_identification_number_false">Include Vehicle Identification Number - false</string>
    <string name="action_credits">Credits</string>
    <string name="user_profile">User Profile</string>
</resources>