<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ab01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbarBlue"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/defense_round_48dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitle="@string/aaid"
            app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Caption"
            app:subtitleTextColor="@color/common_google_signin_btn_text_dark_default"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:id="@+id/rg01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ab02"
        android:layout_below="@+id/ab01"
        android:layout_centerHorizontal="true">


        <RadioButton
            android:id="@+id/rb01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:text="@string/tv0158" />

        <RadioButton
            android:id="@+id/rb02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv0159" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv0160"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/rb04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv0161" />

        <RadioButton
            android:id="@+id/rb05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv0162" />


    </RadioGroup>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ab02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_alignParentStart="true"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/colorToolbarBlue"
            android:fitsSystemWindows="true"
            android:weightSum="1"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnAdd"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    android:layout_gravity="center"
                    android:background="@color/colorToolbarBlue"
                    android:contentDescription="@string/description_info"
                    android:src="@drawable/ic_action_done"
                    android:visibility="gone" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


</RelativeLayout>