<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:backgroundTintMode="screen">

    <RelativeLayout
        android:id="@+id/ll01"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rl03"
        android:layout_alignParentBottom="false"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:background="@color/colorToolbarBlue"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnGallery"
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            android:visibility="invisible"
            app:backgroundTint="@color/colorToolbarBlue"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_photo_album_white_24dp" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCamera"
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            android:visibility="invisible"
            app:backgroundTint="@color/colorToolbarBlue"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_add_a_photo_white_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl03"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"


        android:layout_toEndOf="@+id/ll01"
        android:minHeight="100dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvAN_SUBJECT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"

            android:layout_marginStart="8dp"
            android:text="@string/tv0302"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvAN_NOTE"
            style="@android:style/Widget.Material.ListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_alignParentTop="false"
            android:layout_below="@+id/tvAN_SUBJECT"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:inputType="text"
            android:text="@string/tv0305"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvIP_PTYPE"
            style="@android:style/Widget.Material.ListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_alignParentTop="false"
            android:layout_below="@+id/tvAN_NOTE"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"

            android:text="@string/party_type"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/rl02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/tvIP_PTYPE"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvIV_YEAR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="8dp"

                android:layout_marginStart="8dp"
                android:text="@string/tv0034"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvIV_MAKE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/tv0035"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvIV_MODEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/tv0036"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvIP_FNAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="start"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/firstname"

                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvACCIDENT"
                style="@android:style/Widget.Material.ListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/accident_number"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvAN_AID"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"

                android:text="@string/accident_id"
                android:textSize="18sp"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvAN_CDATE"
            style="@android:style/Widget.Material.ListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl02"


            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/todo"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAN_UDATE"
            style="@android:style/Widget.Material.ListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl02"


            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/tvAN_CDATE"
            android:text="@string/todo"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAN_ID"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/tv0303"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvAN_IPID"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/involved_party"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tvAN_IVID"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/involved_party"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvAN_APPATH"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/tv0304"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>
