<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/my_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbarBlue"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/defense_round_48dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitle="@string/action_settings"
            app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Caption"
            app:subtitleTextColor="@color/common_google_signin_btn_text_dark_default"
            app:title="@string/app_name">


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <Switch
        android:id="@+id/prefer_offline_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"

        android:layout_below="@+id/my_appbar"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/preference_offline_language_off"

        />

    <Switch
        android:id="@+id/prefer_vin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/prefer_offline_languages"
        android:layout_alignStart="@+id/prefer_offline_languages"
        android:layout_below="@+id/prefer_offline_languages"
        android:layout_marginTop="30dp"
        android:text="@string/include_vehicle_identification_number_false" />


</RelativeLayout>