<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/custom_contact_or_url_rg01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        >

        <RadioButton
            android:id="@+id/rbPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/type_contact" />

        <RadioButton
            android:id="@+id/rbUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_above="@+id/tv0009"
            android:layout_alignParentStart="true"
            android:text="@string/type_url" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv0009"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_contact_or_url_rg01"
        android:layout_marginStart="5dp"
        android:elevation="0dp"
        android:gravity="top"
        android:labelFor="@+id/tieXX_BUTTON01"
        android:text="@string/custom1"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:visibility="gone" />


    <EditText
        android:id="@+id/tieXX_BUTTON01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv0009"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textUri"
        android:paddingTop="0dp"

        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv00130"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/tieXX_BUTTON01"
        android:layout_marginStart="5dp"
        android:elevation="0dp"
        android:gravity="top"
        android:labelFor="@+id/tieXX_ICONURL1"
        android:text="@string/icon_server_url"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/tieXX_ICONURL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv00130"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textUri"
        android:paddingTop="0dp"

        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:visibility="gone" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp_phon1_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tieXX_ICONURL1"
        android:visibility="gone"
        app:ccpDialog_showNameCode="true"
        app:ccpDialog_showPhoneCode="true"
        app:ccp_autoDetectCountry="true"
        app:ccp_autoDetectLanguage="true"
        app:ccp_autoFormatNumber="true"
        app:ccp_textSize="12sp" />


    <EditText
        android:id="@+id/tieXX_PHON1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tieXX_ICONURL1"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/ccp_phon1_country"
        android:inputType="phone"
        android:paddingTop="0dp"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv0010"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tieXX_PHON1"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tieXX_PHON1"
        android:elevation="0dp"
        android:labelFor="@+id/tieXX_PHON1"
        android:text="@string/custom2"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv00131"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/tieXX_PHON1"
        android:layout_marginStart="5dp"
        android:elevation="0dp"
        android:gravity="top"
        android:labelFor="@+id/tieXX_URL1"
        android:text="@string/custom5"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/tieXX_URL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv00131"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textUri"
        android:paddingTop="0dp"

        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:visibility="gone" />


</RelativeLayout>